--- a/scripts/scRNAseq/1_integrated_seurat_generation.Rmd
+++ b/scripts/scRNAseq/1_integrated_seurat_generation.Rmd
@@ -18,6 +18,7 @@ require(gridExtra, quietly = T) #display multiple plots
 require(ggrepel, quietly = T) #labels for plots
 require(tibble, quietly = T) #rownames_to_column function
 require(useful, quietly = T) #corner function to peek at data.frames
+require(msigdbr, quietly = T) #accessing gene signatures from mSigDB
 set.seed(1) #set a seed for reproducibility
 ```
 
@@ -134,7 +135,7 @@ new_metadata <- seurat_integrated@meta.data %>%
     dplyr::select(mouse_id)
 
 seurat_integrated <- AddMetaData(seurat_integrated, metadata = new_metadata)
-seurat_integrated$mouse_id <- factor(seurat_integrated$mouse_id, levels = c(paste0("IgG_",1:3),paste0("Spt_",1:3),paste0("PD1_",1:3)))
+seurat_integrated$mouse_id <- factor(seurat_integrated$mouse_id, levels = c(paste0("IgG_",1:3), paste0("Spt_",1:3), paste0("PD1_",1:3)))
 ```
 
 ## T Cell Receptor (TCR) data
@@ -551,7 +552,7 @@ shared_clonotypes <- seurat_integrated@meta.data %>%
   filter(!is.na(clonotype_id)) %>%
   group_by(cd4_or_cd8, clonotype_id, tissue) %>% 
   tally() %>% 
-  summarize(clonotype_tissue_groups = paste(tissue, collapse = "&")) %>% 
+  summarize(clonotype_tissue_groups = paste(sort(tissue), collapse = "&")) %>% #be sure to sort the tissue terms before collapsing
   arrange(desc(clonotype_tissue_groups)) %>% 
   data.frame()
 
@@ -565,17 +566,100 @@ new_metadata <- seurat_integrated@meta.data %>%
 
 new_metadata <- new_metadata %>%
                   mutate(clonotype_shared_tissues = case_when(is.na(clonotype_tissue_groups) ~ NA_character_,
-                                                   tissue == "blood" & clonotype_tissue_groups %in% c("pancreas&pLN&blood", "pancreas&blood") ~ "blood shared",
-                                                   tissue == "pLN"  & clonotype_tissue_groups %in% c("pancreas&pLN&blood", "pancreas&pLN") ~ "pLN shared",
-                                                   tissue == "pancreas"  & clonotype_tissue_groups %in% c("pancreas&pLN&blood", "pancreas&pLN", "pancreas&blood") ~ "pancreas shared",
-                                                   tissue == "pancreas"  & clonotype_tissue_groups == "pancreas" ~ "pancreas non-shared",
-                                                   tissue != "pancreas"  & clonotype_tissue_groups %in% c("pLN&blood", "pLN", "blood") ~ "periphery non-shared"))
+                                                   tissue == "blood" & clonotype_tissue_groups %in% c("pLN&blood&pancreas", "blood&pancreas") ~ "blood PM",
+                                                   tissue == "pLN"  & clonotype_tissue_groups %in% c("pLN&blood&pancreas", "pLN&pancreas") ~ "pLN PM",
+                                                   tissue == "pancreas"  & clonotype_tissue_groups %in% c("pLN&blood&pancreas", "pLN&pancreas", "blood&pancreas") ~ "pancreas PM",
+                                                   tissue == "pancreas"  & clonotype_tissue_groups == "pancreas" ~ "pancreas non-PM",
+                                                   tissue != "pancreas"  & clonotype_tissue_groups %in% c("pLN&blood", "pLN", "blood") ~ "periphery non-PM"))
 seurat_integrated <- AddMetaData(seurat_integrated, new_metadata)
-seurat_integrated$clonotype_shared_tissues <- factor(seurat_integrated$clonotype_shared_tissues, levels = c("pancreas shared", "pancreas non-shared", "pLN shared", "blood shared", "periphery non-shared"))
+seurat_integrated$clonotype_shared_tissues <- factor(seurat_integrated$clonotype_shared_tissues, levels = c("pancreas PM", "pancreas non-PM", "pLN PM", "blood PM", "periphery non-PM"))
 ```
 
-Finally, save the integrated Seurat object. This will be used as the source for meta data in future Seurats.
+Next, gene signatures will be added to the Seurat to plot gene module scores. These gene signatures were gathered from various papers and also msigdb:
+```{r gene module scores}
+#read in data from excel sheets
+prog_exh <- read_excel("ref/signatures/Miller2019_NatureImmuno_SuppTable1.xlsx",sheet = "Progenitor Exh.")$gene
+term_exh <- read_excel("ref/signatures/Miller2019_NatureImmuno_SuppTable1.xlsx",sheet = "Terminally Exh.")$gene
+eff_like <- read_excel("ref/signatures/Miller2019_NatureImmuno_SuppTable1.xlsx",sheet = "Effector-like")$gene
+trm <- read_excel("ref/signatures/20200711_Beura_Trm_2017_Immunity.xlsx", sheet = "Beura_FRT_TRM_UP",col_names = F)$`...1`
+nonbystander <- read_excel("ref/signatures/20200718_Mognol_PNAS2017_bystanders.xlsx", sheet = "OT-1 UP (TS)",col_names = F)$`...1`
+bystander <- read_excel("ref/signatures/20200718_Mognol_PNAS2017_bystanders.xlsx", sheet = "P14 UP (bystander)",col_names = F)$`...1`
+cd8_activation <- read.table("ref/signatures/cd8_activation_sarkar_up.txt")$V1
+cell_cycle <- read.table("ref/signatures/cell_cycle_all_strong.txt")$V1
+lag3 <- read_excel("ref/signatures/stephanie_de_genes.xlsx") #these DE genes are from FindAllMarkers, so they will be parsed out into separate signatures
+  lag3exh1 <- lag3 %>% filter(cluster == 1) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3progexh2 <- lag3 %>% filter(cluster == 2) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3exh3 <- lag3 %>% filter(cluster == 3) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3act4 <- lag3 %>% filter(cluster == 4) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3act6 <- lag3 %>% filter(cluster == 6) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3eff7 <- lag3 %>% filter(cluster == 7) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+  lag3mem8 <- lag3 %>% filter(cluster == 8) %>% filter(p_val_adj<0.05 & avg_logFC > 0) %>% pull(gene)
+
+#some of these are human gene symbols that must be converted to mouse
+trm <- convertHumanGeneList(trm)
+cell_cycle <- convertHumanGeneList(cell_cycle)
+cd8_activation <- convertHumanGeneList(cd8_activation)
+
+#some gene signatures will be from msigdb
+m_df <- msigdbr(species = "Mus musculus", category = "C7")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(m_df %>% 
+                                             filter(gs_name == "GSE8678_IL7R_LOW_VS_HIGH_EFF_CD8_TCELL_UP") %>% 
+                                             dplyr::select(gene_symbol) %>% pull()), 
+                      name = "SLEC", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(m_df %>% 
+                                             filter(gs_name == "GSE8678_IL7R_LOW_VS_HIGH_EFF_CD8_TCELL_DN") %>% 
+                                             dplyr::select(gene_symbol) %>% pull()), 
+                      name = "MPEC", assay = "RNA") 
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(m_df %>% 
+                                             filter(gs_name == "KAECH_DAY15_EFF_VS_MEMORY_CD8_TCELL_UP") %>% 
+                                             dplyr::select(gene_symbol) %>% pull()), 
+                      name = "KAECH_DAY15_EFF_VS_MEMORY_CD8_TCELL_UP", assay = "RNA")
+
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(prog_exh), name = "Miller2019_progenitor_exh", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(term_exh), name = "Miller2019_terminally_exh", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(eff_like), name = "Miller2019_effector_like", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(trm), name = "beura_trm", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(nonbystander), name = "nonbystander", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(bystander), name = "bystander", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(cd8_activation), name = "activation_sarkar", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(cell_cycle), name = "cell_cycle", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3exh1), name = "lag3exh1", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3progexh2), name = "lag3progexh2", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3exh3), name = "lag3exh3", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3mem8), name = "lag3mem8", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3eff7), name = "lag3eff7", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3act4), name = "lag3act4", assay = "RNA")
+seurat_integrated <- AddModuleScore(seurat_integrated, features = list(lag3act6), name = "lag3act6", assay = "RNA")
+
+#this isn't needed yet, but could be useful in the future
+gene_signatures <- c("SLEC1",
+                     "MPEC1",
+                     "KAECH_DAY15_EFF_VS_MEMORY_CD8_TCELL_UP1",
+                      "Miller2019_progenitor_exh1",
+                     "Miller2019_terminally_exh1",
+                     "Miller2019_effector_like1",
+                     "beura_trm1",
+                     "nonbystander1",
+                     "bystander1",
+                     "cell_cycle1",
+                     "activation_sarkar1",
+                     "lag3exh11",
+                     "lag3progexh21",
+                     "lag3exh31",
+                     "lag3mem81",
+                     "lag3eff71",
+                     "lag3act41",
+                     "lag3act61")
+```
+
+Finally, add the new metadata from the integrated Seurat back to the separate Seurats of the CD4 and CD8 T cells and then save.
 ```{r save seurat object}
+new_metadata <- seurat_integrated@meta.data #take all the metadata from the integrated Seurat and add to the subsetted objects
+cd8 <- AddMetaData(cd8, new_metadata)
+cd4 <- AddMetaData(cd4, new_metadata)
+
 #save the Seurats
+saveRDS(cd4, "objects/seurat_cd4_clustered.rds")
+saveRDS(cd8, "objects/seurat_cd8_clustered.rds")
 saveRDS(seurat_integrated, "objects/seurat_integrated_clustered.rds")
 ```
